xpcom/io/nsLocalFileWin.cpp
@@ -7,6 +7,7 @@
 #include "mozilla/ArrayUtils.h"
 #include "mozilla/Assertions.h"
 #include "mozilla/DebugOnly.h"
+#include "mozilla/Maybe.h"
 #include "mozilla/ProfilerLabels.h"
 #include "mozilla/TextUtils.h"
 #include "mozilla/UniquePtrExtensions.h"
@@ -1867,9 +1868,11 @@ nsresult nsLocalFile::MoveOrCopyAsSingleFileOrDir(nsIFile* aDestParent,
     return NS_ERROR_FILE_ACCESS_DENIED;
   }
 
-  // Determine if we are a directory before any move/copy.
-  bool isDir = false;
-  MOZ_ALWAYS_SUCCEEDS(IsDirectory(&isDir));
+  // Attempt to determine if we are a directory before any move/copy.
+  auto isDir = Some(false);
+  if (NS_FAILED(IsDirectory(isDir.ptr()))) {
+    isDir.reset();
+  }
 
   int copyOK = 0;
   if (move) {
@@ -1936,7 +1939,8 @@ nsresult nsLocalFile::MoveOrCopyAsSingleFileOrDir(nsIFile* aDestParent,
       // within the same volume. We check this to prevent unnecessary calls to
       // SetNamedSecurityInfoW, this avoids a request for SeTcbPrivilege, which
       // can cause a lot of audit events if enabled (Bug 1816694).
-      if (!ChildAclMatchesAclInheritedFromParent(WrapNotNull(childDacl), isDir,
+      if (isDir.isNothing() ||
+          !ChildAclMatchesAclInheritedFromParent(WrapNotNull(childDacl), *isDir,
                                                  childSecDesc, aDestParent)) {
         // We don't expect this to fail, but it shouldn't crash in release.
         MOZ_ALWAYS_TRUE(
